--- a/ToDo.txt
+++ b/ToDo.txt
@@ -6,3 +6,4 @@ calculate periods : /admin/calc
 routes.php:129 add colors to have a total of 10
 mail settings
 port table roles
+port table settings (adapt url)
