--- a/ToDo.txt
+++ b/ToDo.txt
@@ -7,3 +7,4 @@ routes.php:129 add colors to have a total of 10
 mail settings
 port table roles
 port table settings (adapt url)
+port table password_resets
