--- a/ToDo.txt
+++ b/ToDo.txt
@@ -9,5 +9,6 @@ port table roles
 port table settings (adapt url)
 port table password_resets
 port table guests new field guest title
+alle js + css lokal einbinden
 
 minify js & css
