--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,24 +1,17 @@
 ToDo:
 
-visitor blocking raus
-JS von footer in separate JS-files
-
 -before going life with v3:
 set calendar duration = 10
 calculate periods : /admin/calc
 routes.php:129 add colors to have a total of 10
 mail settings
 
-alle js + css lokal einbinden
-
 DB:
-port table roles
-port table settings (adapt url)
-port table password_resets
-port table guests new field guest_title
-port table reservation new field reservation_title
-delete table comments
-delete settings setting_num_comments
+port table roles (structure?)
+port table settings (structure) (adapt url & texts)
+port table password_resets (structure?)
+port table guests new field guest_title (structure)
+port table reservation new field reservation_title (structure)
+delete table comments (structure)
+delete settings setting_num_comments (structure)
 users secure question raus!
-
-minify js & css
