--- a/ToDo.txt
+++ b/ToDo.txt
@@ -4,6 +4,8 @@ ToDo:
 routes.php:129 add colors to have a total of 10
 mail settings
 
+cron jobs --> web.php
+
 DB:
 port table roles (structure????)
 delete table comments (structure)
